--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "webpack-mock-dev-server",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Mocks webpack dev server request in an easy configurable way",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "standard-version && git push --follow-tags"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "@types/express": "^4.16.1",
     "@types/minimatch": "^3.0.3",
     "@types/node": "^11.11.5",
+    "standard-version": "^5.0.2",
     "typescript": "^3.3.4000"
   },
   "dependencies": {
