--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/minimatch": "^3.0.3",
-    "@types/node": "^12.0.5",
+    "@types/node": "^12.6.2",
     "standard-version": "^6.0.1",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.3"
   },
   "dependencies": {
+    "lodash": "^4.17.14",
     "minimatch": "^3.0.4"
   }
 }
